--- a/README
+++ b/README
@@ -4,15 +4,7 @@ NOTICE: It is not at all recommended to run this software on a live web server. 
 Set up
 ------
 
-In order to work, you'll need a file called `db/data.json` containing:
-
-```json
-{
-  "messages": [
-
-  ]
-}
-```
+In order to work, you'll need an empty file called `message`.
 
 With `node` and `npm` installed, run `npm i` to install dependencies.
 
