--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NOTICE: It is not at all recommended to run this software on a live web server. 
 Set up
 ------
 
-In order to work, you'll need an empty file called `message`.
+In order to work, you'll need an empty file called `db/messages`.
 
 With `node` and `npm` installed, run `npm i` to install dependencies.
 
