--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 NOTICE: It is not at all recommended to run this software on a live web server. It is intended as a simplified example to see how various pieces of a full stack web app may work.
 
 
-Set up
-------
+Installation
+------------
 
 With `node` and `npm` installed, run `npm i` to install dependencies.
 
@@ -10,4 +10,4 @@ With `node` and `npm` installed, run `npm i` to install dependencies.
 Development
 -----------
 
-Run `npm dev` to start a local server running at `http://localhost:3000`.
+Run `npm run dev` to start a local server running at `http://localhost:3000`.
